{
    "name": "Player1InputActions",
    "maps": [
        {
            "name": "Player",
            "id": "7f2e2059-7768-4a1b-b8b7-48ac0d305780",
            "actions": [
                {
                    "name": "Air",
                    "type": "Button",
                    "id": "f7a4f13a-8dc9-4186-bed6-4e5a293aee87",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                },
                {
                    "name": "Earth",
                    "type": "Button",
                    "id": "0c4bdcd5-45e5-44d8-96f0-f84e01b0cb74",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                },
                {
                    "name": "Water",
                    "type": "Button",
                    "id": "4578e5a2-d332-4f3a-a92d-2f80948b6e71",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                },
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "c493b23f-0a83-438c-b8a3-9b1156970ec3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                },
                {
                    "name": "Bolt/Wave_ShapeOrOffensiveMode",
                    "type": "Button",
                    "id": "678a0de5-97f0-4fb8-b9b0-8561ea2c1bb5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Barrage/Burst_ShapeOrDefensiveMode",
                    "type": "Button",
                    "id": "c816065d-ab30-473c-bdec-e55705eb7496",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Ball/Cloud_Shape",
                    "type": "Button",
                    "id": "c5db00a6-2371-4c6a-9cda-981467452258",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "eeae9039-a94a-4523-ab32-2e75d657f0ad",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "71abf8da-64f2-4d9c-87d0-645109faf869",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Air",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "21ed60be-0146-421a-86c6-b80de2bc42a2",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Earth",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c42239c8-a85c-48cd-a1ea-a8a911129277",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Water",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cc678887-52b0-4566-9890-474524c717a6",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f14241c0-48bc-475b-aa86-f20cb716e1d1",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Bolt/Wave_ShapeOrOffensiveMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "59f95b74-6bc2-4a88-8d59-7b2215456499",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Barrage/Burst_ShapeOrDefensiveMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "49e8e528-b12e-43f7-b14c-39ccf9aa65fd",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Ball/Cloud_Shape",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "91731461-6eae-4bb5-9f3c-b9b39e2f741f",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}